--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -16,9 +16,8 @@
                            placeholder="Nombre del producto"
                            formControlName="name">
 
-                    <span class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        error message
+                    <span *ngIf="isValidField('name')" class="form-text text-danger">
+                        {{ getFieldError('name') }}
                     </span>
                 </div>
             </div>
@@ -31,8 +30,9 @@
                            class="form-control"
                            placeholder="Precio del producto"
                            formControlName="price">
-                    <span class="form-text text-danger">
-                        El precio debe de ser 0 o mayor
+
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
+                      {{ getFieldError('price') }}
                     </span>
                 </div>
             </div>
@@ -46,8 +46,8 @@
                            placeholder="Existencias del producto"
                            formControlName="inStorage">
 
-                    <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
+                    <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
+                      {{ getFieldError('inStorage') }}
                     </span>
                 </div>
             </div>
