Fix: array form doesn't get new favorites

--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -90,5 +90,5 @@
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ '' | json }}</pre>
+<pre>{{ favoriteGames.value }}</pre>
 <pre>{{ 'object' | json }}</pre>
